--- a/collection.html
+++ b/collection.html
@@ -95,75 +95,119 @@ async function loadCollectionSmart() {
   }
 
   // === 2️⃣ Правила для кожної збірки ===
-  const rules = {
-    "Фантастика, що вражає уяву": {
-      genre: ["фантаст", "sci-fi"],
-      keywords: ["робот", "штуч", "майбут", "космос", "паранорм"],
-    },
-    "Найстрашніші фільми жахів": {
-      genre: ["жах"],
-      keywords: ["маніяк", "вбив", "страш", "кров", "демон"],
-    },
-    "Обов’язкові до перегляду фільми": {
-      genre: ["драма", "біограф", "кримінал"],
-      keywords: ["реальн", "істор"],
-    },
-    "Комедії, що піднімуть настрій": {
-      genre: ["комеді"],
-      keywords: ["сміх", "весел", "кумед"],
-    },
-    "Адреналін і швидкість — про гонки": {
-      keywords: ["гонк", "перего", "драйв", "швидк"],
-    },
-    "Фільми про танці та музику": {
-      keywords: ["танц", "музик", "спів", "ритм"],
-    },
-    "Новорічний і різдвяний настрій": {
-      keywords: ["різдв", "новор", "свят"],
-    },
-    "Фільми про виживання": {
-      keywords: ["виживан", "боротьб", "втеч", "екстрим"],
-    },
-    "Історії, засновані на реальних подіях": {
-      keywords: ["істор", "реальн", "біограф"],
-    },
-    "Кіно про собак 🐾": {
-      keywords: ["пес", "собак", "dog"],
-    },
-    "Мафія, гангстери та бандити": {
-      genre: ["кримінал"],
-      keywords: ["маф", "ганг", "банд"],
-    },
-    "Шпигуни, агенти й спецоперації": {
-      keywords: ["агент", "шпиг", "розвід", "спец"],
-    },
-    "Маніяки, психопати та трилери": {
-      genre: ["трилер"],
-      keywords: ["маніяк", "вбив", "псих", "страх"],
-    },
-    "Штучний інтелект і технології майбутнього": {
-      keywords: ["робот", "ai", "штуч", "технолог"],
-    },
-    "Життя за ґратами — фільми про тюрму": {
-      keywords: ["тюрм", "в’язн", "ув’язн"],
-    },
-    "Пограбування, афери та трюки": {
-      keywords: ["пограб", "афер", "крадіж"],
-    },
-    "Апокаліпсис і кінець світу": {
-      keywords: ["апокал", "кінець", "катастроф"],
-    },
-    "Фільми про кохання 💞": {
-      genre: ["роман", "мелодрам"],
-      keywords: ["кохан", "романс"],
-    },
-    "Фільми про космос": {
-      keywords: ["космос", "галактик", "орбіта"],
-    },
-    "Улюблені фільми Disney": {
-      keywords: ["сімейн", "дитяч", "мульт", "пригод"],
-    },
-  };
+const rules = {
+  "Фантастика, що вражає уяву": {
+    genre: ["фантаст", "sci", "sci-fi", "фентезі"],
+    keywords: [
+      "майбутн", "космос", "галактик", "чужопланет", "робот", "штучн",
+      "телепат", "телепорт", "кіборг", "віруси", "екзоскелет", "майбутнього", "алгоритм"
+    ]
+  },
+
+  "Найстрашніші фільми жахів": {
+    genre: ["жах", "хорор"],
+    keywords: [
+      "вбив", "страх", "демон", "одержим", "привид",
+      "монстр", "расчлен", "заклят", "труп"
+    ]
+  },
+
+  "Обов’язкові до перегляду фільми": {
+    genre: ["драма", "біограф", "історич"],
+    keywords: [
+      "реальн", "правдив", "поді", "боротьб", "перемог",
+      "емоційн", "глибок", "психолог"
+    ]
+  },
+
+  "Комедії, що піднімуть настрій": {
+    genre: ["комеді"],
+    keywords: [
+      "кумед", "сміх", "весел", "легка", "ірон", "фан",
+      "позитив", "прикол", "гумор"
+    ]
+  },
+
+  "Адреналін і швидкість — про гонки": {
+    genre: ["екшн"],
+    keywords: [
+      "гонк", "драйв", "швидк", "перегони", "тюнінг", "рейс", "форсаж"
+    ]
+  },
+
+  "Фільми про танці та музику": {
+    genre: ["мюзикл", "концерт", "біограф", "документал"],
+    keywords: [
+      "танц", "ритм", "хореограф", "балет",
+      "музик", "спів", "вокал", "реп", "hip hop", "dj", "рок",
+      "гурт", "група", "піаніно", "гітара", "скрипк", "саундтрек"
+    ]
+  },
+
+  "Новорічний і різдвяний настрій": {
+    keywords: ["різдв", "новор", "санта", "янгол", "свят", "зим", "ялинк"]
+  },
+
+  "Фільми про виживання": {
+    keywords: ["виживан", "пустел", "боротьб", "загублен", "екстрим", "катастроф"]
+  },
+
+  "Історії, засновані на реальних подіях": {
+    genre: ["істор", "біограф"],
+    keywords: ["реальн", "правдив", "справжн", "свідчен"]
+  },
+
+  "Кіно про собак 🐾": {
+    keywords: ["собак", "пес", "dog", "лабрадор", "вівчарк"]
+  },
+
+  "Мафія, гангстери та бандити": {
+    genre: ["кримінал"],
+    keywords: ["маф", "ганг", "банд", "картель", "нарко", "грабіж"]
+  },
+
+  "Шпигуни, агенти й спецоперації": {
+    genre: ["екшн", "трилер"],
+    keywords: ["агент", "шпиг", "розвід", "спец", "місія", "операц"]
+  },
+
+  "Маніяки, психопати та трилери": {
+    genre: ["трилер", "детектив"],
+    keywords: ["маніяк", "псих", "вбивц", "розслідув", "переслідув"]
+  },
+
+  "Штучний інтелект і технології майбутнього": {
+    keywords: ["ai", "штучн", "технолог", "робот", "алгоритм", "машинне навчання"]
+  },
+
+  "Життя за ґратами — фільми про тюрму": {
+    keywords: ["тюрм", "ув'язн", "в'язниц", "втеч", "зона"]
+  },
+
+  "Пограбування, афери та трюки": {
+    keywords: ["пограб", "афер", "грабіж", "злод", "кримінал", "шахра"]
+  },
+
+  "Апокаліпсис і кінець світу": {
+    keywords: [
+      "апокал", "зомбі", "кінець світу", "катастроф", "всесвітня", "пандем"
+    ]
+  },
+
+  "Фільми про кохання 💞": {
+    genre: ["роман", "мелодрам"],
+    keywords: ["кохан", "романс", "пара", "закохан", "серце"]
+  },
+
+  "Фільми про космос": {
+    keywords: ["космос", "орбіта", "астронавт", "галактик", "місія"]
+  },
+
+  "Улюблені фільми Disney": {
+    keywords: ["мульт", "дитяч", "пригод", "сімейн", "анімован"]
+  }
+};
+
 
   const rule = rules[name];
   if (!rule) {
@@ -176,7 +220,8 @@ async function loadCollectionSmart() {
     (str || "").toLowerCase().replace(/[^\p{L}\p{N} ]/gu, "");
 // === 4️⃣ Фільтр: тільки фільми + жанри + ключові слова
 let result = films.filter((film) => {
-  if (film.type !== "Фільм") return false; // ⛔ прибираємо серіали та мультсеріали повністю
+  // тільки фільми
+  if (!film.type || film.type.toLowerCase() !== "фільм") return false;
 
   const g = normalize(film.genre);
   const d = normalize(film.description);
@@ -192,14 +237,15 @@ let result = films.filter((film) => {
     if (g.includes(word)) score += 1;
   });
 
-  return score > 0;
+  // новий поріг — мінімум 3 бали
+  return score >= 3;
 });
+
 
 // === 🧹 5️⃣ УНІКАЛІЗАЦІЯ: по id, title і poster
 const uniqueMap = new Map();
 
 result.forEach((film) => {
-  // 🔥 ключ по поєднанню назви + року + типу
   const key =
     (film.title?.toLowerCase() || "") +
     "_" +
@@ -207,12 +253,11 @@ result.forEach((film) => {
     "_" +
     (film.type || "");
 
-  if (!uniqueMap.has(key)) {
-    uniqueMap.set(key, film);
-  }
+  if (!uniqueMap.has(key)) uniqueMap.set(key, film);
 });
 
 result = Array.from(uniqueMap.values());
+
 
   // === 6️⃣ Перемішуємо і беремо до 30 фільмів
   result = result.sort(() => Math.random() - 0.5).slice(0, 30);
