--- a/collection.html
+++ b/collection.html
@@ -71,9 +71,9 @@
 
 
 // === 🧠 Розумний автоматичний підбір фільмів по збірці ===
-// Використовує жанр + ключові слова опису (варіант C)
+// Використовує жанр + ключові слова опису + НАЗВУ (найважливіше)
 // Показує до 30 фільмів
-// Автоматично оновлюється при додаванні нових фільмів у Supabase
+// Автоматично оновлюється при додаванні нових у Supabase
 
 async function loadCollectionSmart() {
   const params = new URLSearchParams(window.location.search);
@@ -83,7 +83,7 @@ async function loadCollectionSmart() {
 
   title.textContent = name;
 
-  // 1️⃣ Тягаємо ВСІ фільми з Supabase
+  // 1️⃣ Завантаження всіх фільмів
   const { data: films, error } = await supabase
     .from("films_site")
     .select("*")
@@ -95,119 +95,105 @@ async function loadCollectionSmart() {
   }
 
   // === 2️⃣ Правила для кожної збірки ===
-const rules = {
-  "Фантастика, що вражає уяву": {
-    genre: ["фантаст", "sci", "sci-fi", "фентезі"],
-    keywords: [
-      "майбутн", "космос", "галактик", "чужопланет", "робот", "штучн",
-      "телепат", "телепорт", "кіборг", "віруси", "екзоскелет", "майбутнього", "алгоритм"
-    ]
-  },
+  const rules = {
+    "Фантастика, що вражає уяву": {
+      genre: ["фантаст", "sci", "sci-fi", "фентезі"],
+      keywords: [
+        "майбут", "космос", "галак", "чужопланет", "робот", "штучн",
+        "телепат", "телепорт", "кіборг", "вірус", "екзоскелет", "алгоритм"
+      ]
+    },
 
-  "Найстрашніші фільми жахів": {
-    genre: ["жах", "хорор"],
-    keywords: [
-      "вбив", "страх", "демон", "одержим", "привид",
-      "монстр", "расчлен", "заклят", "труп"
-    ]
-  },
+    "Найстрашніші фільми жахів": {
+      genre: ["жах", "хорор"],
+      keywords: ["вбив", "страх", "демон", "одержим", "привид", "монстр", "заклят"]
+    },
 
-  "Обов’язкові до перегляду фільми": {
-    genre: ["драма", "біограф", "історич"],
-    keywords: [
-      "реальн", "правдив", "поді", "боротьб", "перемог",
-      "емоційн", "глибок", "психолог"
-    ]
-  },
+    "Обов’язкові до перегляду фільми": {
+      genre: ["драма", "біограф", "істор"],
+      keywords: ["реальн", "правдив", "емоцій", "психолог", "боротьб"]
+    },
 
-  "Комедії, що піднімуть настрій": {
-    genre: ["комеді"],
-    keywords: [
-      "кумед", "сміх", "весел", "легка", "ірон", "фан",
-      "позитив", "прикол", "гумор"
-    ]
-  },
+    "Комедії, що піднімуть настрій": {
+      genre: ["комед"],
+      keywords: ["кумед", "весел", "легка", "ірон", "фан", "гумор"]
+    },
 
-  "Адреналін і швидкість — про гонки": {
-    genre: ["екшн"],
-    keywords: [
-      "гонк", "драйв", "швидк", "перегони", "тюнінг", "рейс", "форсаж"
-    ]
-  },
+    "Адреналін і швидкість — про гонки": {
+      genre: ["екшн"],
+      keywords: ["гонк", "драйв", "швидк", "перего", "рейс", "форсаж"]
+    },
 
-  "Фільми про танці та музику": {
-    genre: ["мюзикл", "концерт", "біограф", "документал"],
-    keywords: [
-      "танц", "ритм", "хореограф", "балет",
-      "музик", "спів", "вокал", "реп", "hip hop", "dj", "рок",
-      "гурт", "група", "піаніно", "гітара", "скрипк", "саундтрек"
-    ]
-  },
+    "Фільми про танці та музику": {
+      genre: ["мюзикл", "концерт", "біограф", "документал"],
+      keywords: [
+        "танц", "ритм", "балет", "музик", "вокал", "спів", "реп",
+        "hip hop", "dj", "рок", "гурт", "група", "саундтрек",
+        "гітара", "піаніно", "скрипк"
+      ]
+    },
 
-  "Новорічний і різдвяний настрій": {
-    keywords: ["різдв", "новор", "санта", "янгол", "свят", "зим", "ялинк"]
-  },
+    "Новорічний і різдвяний настрій": {
+      keywords: ["різдв", "новор", "санта", "янгол", "ялинк", "зим"]
+    },
 
-  "Фільми про виживання": {
-    keywords: ["виживан", "пустел", "боротьб", "загублен", "екстрим", "катастроф"]
-  },
+    "Фільми про виживання": {
+      keywords: ["виживан", "боротьб", "загублен", "екстрим", "катастроф"]
+    },
 
-  "Історії, засновані на реальних подіях": {
-    genre: ["істор", "біограф"],
-    keywords: ["реальн", "правдив", "справжн", "свідчен"]
-  },
+    "Історії, засновані на реальних подіях": {
+      genre: ["істор", "біограф"],
+      keywords: ["реальн", "свідчен", "правдив"]
+    },
 
-  "Кіно про собак 🐾": {
-    keywords: ["собак", "пес", "dog", "лабрадор", "вівчарк"]
-  },
+    "Кіно про собак 🐾": {
+      keywords: ["собак", "пес", "dog", "лабрадор", "вівчарк"]
+    },
 
-  "Мафія, гангстери та бандити": {
-    genre: ["кримінал"],
-    keywords: ["маф", "ганг", "банд", "картель", "нарко", "грабіж"]
-  },
+    "Мафія, гангстери та бандити": {
+      genre: ["кримінал"],
+      keywords: ["маф", "ганг", "банд", "картель", "нарко"]
+    },
 
-  "Шпигуни, агенти й спецоперації": {
-    genre: ["екшн", "трилер"],
-    keywords: ["агент", "шпиг", "розвід", "спец", "місія", "операц"]
-  },
+    "Шпигуни, агенти й спецоперації": {
+      genre: ["екшн", "трилер"],
+      keywords: ["агент", "шпиг", "розвід", "спец", "операц"]
+    },
 
-  "Маніяки, психопати та трилери": {
-    genre: ["трилер", "детектив"],
-    keywords: ["маніяк", "псих", "вбивц", "розслідув", "переслідув"]
-  },
+    "Маніяки, психопати та трилери": {
+      genre: ["трилер", "детектив"],
+      keywords: ["маніяк", "псих", "вбивц", "розслідув"]
+    },
 
-  "Штучний інтелект і технології майбутнього": {
-    keywords: ["ai", "штучн", "технолог", "робот", "алгоритм", "машинне навчання"]
-  },
+    "Штучний інтелект і технології майбутнього": {
+      keywords: ["ai", "штучн", "технолог", "робот", "алгоритм"]
+    },
 
-  "Життя за ґратами — фільми про тюрму": {
-    keywords: ["тюрм", "ув'язн", "в'язниц", "втеч", "зона"]
-  },
+    "Життя за ґратами — фільми про тюрму": {
+      keywords: ["тюрм", "ув'язн", "в'язниц", "втеч", "зона"]
+    },
 
-  "Пограбування, афери та трюки": {
-    keywords: ["пограб", "афер", "грабіж", "злод", "кримінал", "шахра"]
-  },
+    "Пограбування, афери та трюки": {
+      keywords: ["пограб", "афер", "грабіж", "злод", "шахра"]
+    },
 
-  "Апокаліпсис і кінець світу": {
-    keywords: [
-      "апокал", "зомбі", "кінець світу", "катастроф", "всесвітня", "пандем"
-    ]
-  },
+    "Апокаліпсис і кінець світу": {
+      keywords: ["апокал", "зомбі", "катастроф", "пандем"]
+    },
 
-  "Фільми про кохання 💞": {
-    genre: ["роман", "мелодрам"],
-    keywords: ["кохан", "романс", "пара", "закохан", "серце"]
-  },
+    "Фільми про кохання 💞": {
+      genre: ["роман", "мелодрам"],
+      keywords: ["кохан", "романс", "закохан", "серце"]
+    },
 
-  "Фільми про космос": {
-    keywords: ["космос", "орбіта", "астронавт", "галактик", "місія"]
-  },
+    "Фільми про космос": {
+      keywords: ["космос", "орбіта", "галактик", "астронавт"]
+    },
 
-  "Улюблені фільми Disney": {
-    keywords: ["мульт", "дитяч", "пригод", "сімейн", "анімован"]
-  }
-};
-
+    "Улюблені фільми Disney": {
+      keywords: ["мульт", "дитяч", "сімейн", "анімован", "пригод"]
+    }
+  };
 
   const rule = rules[name];
   if (!rule) {
@@ -215,61 +201,48 @@ const rules = {
     return;
   }
 
-  // === 3️⃣ Нормалізація ===
+  // === 3️⃣ Правильна нормалізація ===
   const normalize = (str) =>
-  (str || "")
-    .toLowerCase()
-    .replace(/[^\p{L}\p{N}\s\-']/gu, " ");
+    (str || "")
+      .toLowerCase()
+      .replace(/[^\p{L}\p{N}\s\-']/gu, " ");
 
-// === 4️⃣ Фільтр: тільки фільми + жанри + ключові слова
-let result = films.filter((film) => {
-  // тільки фільми
-  if (!film.type || film.type.toLowerCase() !== "фільм") return false;
+  // === 4️⃣ Розумний фільтр
+  let result = films.filter((film) => {
+    if (!film.type || film.type.toLowerCase() !== "фільм") return false;
 
-  const g = normalize(film.genre);
-  const d = normalize(film.description);
-  const t = normalize(film.title);
+    const g = normalize(film.genre);
+    const d = normalize(film.description);
+    const t = normalize(film.title);
 
-  let score = 0;
+    let score = 0;
 
-  rule.genre?.forEach((word) => {
-    if (g.includes(word)) score += 3;
+    rule.genre?.forEach((word) => {
+      if (g.includes(word)) score += 3;
+    });
+
+    rule.keywords?.forEach((word) => {
+      if (d.includes(word)) score += 2;
+      if (g.includes(word)) score += 1;
+      if (t.includes(word)) score += 3; // НАЗВА — головний фактор
+    });
+
+    return score >= 3;
   });
 
-  rule.keywords?.forEach((word) => {
-    if (d.includes(word)) score += 2;
-    if (g.includes(word)) score += 1;
+  // === 5️⃣ Унікалізація
+  const uniqueMap = new Map();
+  result.forEach((film) => {
+    const key = (film.title?.toLowerCase() || "") + "_" + (film.year || "");
+    if (!uniqueMap.has(key)) uniqueMap.set(key, film);
   });
 
-  // новий поріг — мінімум 3 бали
-rule.keywords?.forEach((word) => {
-  if (t.includes(word)) score += 3; // назва має найбільшу вагу
-});
-  return score >= 3;
-});
+  result = Array.from(uniqueMap.values());
 
-
-// === 🧹 5️⃣ УНІКАЛІЗАЦІЯ: по id, title і poster
-const uniqueMap = new Map();
-
-result.forEach((film) => {
-  const key =
-    (film.title?.toLowerCase() || "") +
-    "_" +
-    (film.year || "") +
-    "_" +
-    (film.type || "");
-
-  if (!uniqueMap.has(key)) uniqueMap.set(key, film);
-});
-
-result = Array.from(uniqueMap.values());
-
-
-  // === 6️⃣ Перемішуємо і беремо до 30 фільмів
+  // === 6️⃣ Перемішуємо і беремо до 30
   result = result.sort(() => Math.random() - 0.5).slice(0, 30);
 
-  // === 7️⃣ Вивід фільмів
+  // === 7️⃣ Виводимо картки
   container.innerHTML = "";
   result.forEach((film) => {
     const card = document.createElement("div");
@@ -288,7 +261,6 @@ result = Array.from(uniqueMap.values());
   });
 }
 
-// 🚀 Запускаємо розумний підбір
 document.addEventListener("DOMContentLoaded", loadCollectionSmart);
 
 
