--- a/index.html
+++ b/index.html
@@ -202,9 +202,8 @@ async function loadLatestFilms(page = 1) {
     const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
         let proxyPoster = rawPoster;
     
-    if (rawPoster && !rawPoster.includes("postimg.cc") && !isMobile) {
-      proxyPoster = `https://uakino-proxy.lyuda14070702.workers.dev?url=${encodeURIComponent(rawPoster)}`;
-    }
+    // ❌ Відключаємо проксі повністю — показуємо пряме фото
+    proxyPoster = rawPoster;
 
 
     card.innerHTML = `
@@ -589,6 +588,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </body>
 </body>
 </html>
+
 
 
 
