--- a/collections.html
+++ b/collections.html
@@ -81,17 +81,17 @@ const collections = [
   { name: "Новорічний і різдвяний настрій", image: "https://i.ibb.co/pvshtVR4/6bbc5621a1a672e81b175a0a7a24f7f30c2851e2.jpg" },
   { name: "Фільми про виживання", image: "https://i.ibb.co/rVhrhGL/1713462630-fb1.jpg" },
   { name: "Історії, засновані на реальних подіях", image: "https://i.ibb.co/t10sdsf/1713462630-fb1.jpg" },
-  { name: "Кіно про собак 🐾", image: "https://i.postimg.cc/8PmXvvTt/dogs.jpg" },
-  { name: "Мафія, гангстери та бандити", image: "https://i.postimg.cc/pXJzY7hx/mafia.jpg" },
-  { name: "Шпигуни, агенти й спецоперації", image: "https://i.postimg.cc/vmH3sWv8/spies.jpg" },
-  { name: "Маніяки, психопати та трилери", image: "https://i.postimg.cc/tCxTsbp8/thriller.jpg" },
-  { name: "Штучний інтелект і технології майбутнього", image: "https://i.postimg.cc/Dz9tST5T/ai.jpg" },
-  { name: "Життя за ґратами — фільми про тюрму", image: "https://i.postimg.cc/vZHq0dYB/prison.jpg" },
-  { name: "Пограбування, афери та трюки", image: "https://i.postimg.cc/1t0Gm44T/heist.jpg" },
-  { name: "Апокаліпсис і кінець світу", image: "https://i.ibb.co/1GtvQVVX/images.jpg" },
-  { name: "Фільми про кохання 💞", image: "https://i.postimg.cc/T2DCnhhH/love.jpg" },
-  { name: "Фільми про космос", image: "https://i.postimg.cc/Z5JtwYxV/space.jpg" },
-  { name: "Улюблені фільми Disney", image: "https://i.postimg.cc/FsGdmF1R/disney.jpg" },
+  { name: "Кіно про собак 🐾", image: "https://i.ibb.co/QjN961jd/A-Dogs-Purpose.jpg" },
+  { name: "Мафія, гангстери та бандити", image: "https://i.ibb.co/CpbbzDxf/1-141.jpg" },
+  { name: "Шпигуни, агенти й спецоперації", image: "https://i.ibb.co/0RBJCCYZ/filmy-pro-shpionov.jpg" },
+  { name: "Маніяки, психопати та трилери", image: "https://i.ibb.co/4q2fZ6h/filmy-pro-maniyakiv-ta-seriynyh-vbyvts.jpg" },
+  { name: "Штучний інтелект і технології майбутнього", image: "https://i.ibb.co/xk641yh/1548421719-5129.jpg" },
+  { name: "Життя за ґратами — фільми про тюрму", image: "https://images.kinorium.com/movie/shot/343839/w1500_84762.jpg" },
+  { name: "Пограбування, афери та трюки", image: "https://s0.tchkcdn.com/g-tsj697un37rL8RMSM24hew/1/400750/660x480/f/0/60c_malysh_na_drajve.jpeg" },
+  { name: "Апокаліпсис і кінець світу", image: "https://i.ibb.co/zWmYm5kr/97419831-p05cfmmj.jpg" },
+  { name: "Фільми про кохання 💞", image: "https://i.ibb.co/Q7y7FG63/fc759596-2efd-4b0a-a261-a25889a8.jpg" },
+  { name: "Фільми про космос", image: "https://i.ibb.co/hxvnSk70/osuh4f1beo7xm9s6ryer.jpg" },
+  { name: "Улюблені фільми Disney", image: "https://i.ibb.co/q3Q8wcxR/content-disney-plus.jpg" },
 ];
 
 
