--- a/series.html
+++ b/series.html
@@ -913,79 +913,59 @@ function useSource(url) {
     // 🎬 Підбірка рекомендованих серіалів
     loadRecommendedSeries(first.title, first.genre);
 
-// 🧩 Перевірка PRO-доступу (працює і для Telegram, і для Email/Web)
-let hasPro = true;
-const isProSeries = String(first.pro_access || '').toUpperCase() === 'PRO';
+// === Перевірка PRO-доступу ===
+let hasPro = false;
+const isProSeries = String(first.pro_access || "").toUpperCase() === "PRO";
 
-if (isProSeries) {
-  hasPro = false;
-
-  const tgUser   = localStorage.getItem('telegram_user');
-  const emailUser = localStorage.getItem('email_user');
-  const webId     = localStorage.getItem('web_id');
-  let url = window.APPS_SCRIPT_URL;
+async function checkProAccess() {
+  if (!isProSeries) {
+    hasPro = true;      // серіал без PRO → доступний всім
+    return;
+  }
 
   try {
-    // 🟢 Telegram-вхід
+    const tgUser    = localStorage.getItem("telegram_user");
+    const emailUser = localStorage.getItem("email_user");
+    const webId     = localStorage.getItem("web_id");
+
+    let url = window.APPS_SCRIPT_URL;
+
     if (tgUser) {
       const parsed = JSON.parse(tgUser);
-      if (parsed?.id) url += `?user_id=${encodeURIComponent(parsed.id)}`;
-
-    // 🟣 Email / Web-вхід (WEB-ID)
+      url += `?user_id=${parsed.id}`;
     } else if (webId) {
-      url += `?user_id=${encodeURIComponent(webId)}`;
-
-    // 🔸 Резерв — якщо ID є всередині emailUser
+      url += `?user_id=${webId}`;
     } else if (emailUser) {
       const parsed = JSON.parse(emailUser);
-      if (parsed?.id) url += `?user_id=${encodeURIComponent(parsed.id)}`;
+      url += `?user_id=${parsed.id}`;
     }
 
-    console.log("📡 Перевірка PRO:", url);
     const res = await fetch(url);
     const json = await res.json();
     hasPro = json?.isPro === true;
-    console.log("🔎 Результат PRO:", json);
 
-  } catch (err) {
-    console.warn("❌ Помилка перевірки PRO:", err);
-  }
-
-  // 💎 Якщо немає PRO — показуємо банер
-  if (!hasPro) {
-    const playerBox = document.querySelector('.player-box');
-    playerBox.innerHTML = `
-      <div style="
-        background:#000;
-        color:#00fff2;
-        text-align:center;
-        padding:45px 20px;
-        border-radius:12px;
-        border:1px solid rgba(0,255,255,0.3);
-        box-shadow:0 0 30px rgba(0,255,255,0.15);
-        font-size:18px;
-        line-height:1.6;
-      ">
-        💎 Цей контент доступний лише для <b>PRO користувачів</b>.<br><br>
-        <a href="profile.html" style="color:#fff;text-decoration:underline;font-weight:600;">
-          Отримати PRO
-        </a>
-      </div>
-    `;
+  } catch (e) {
+    hasPro = false;
   }
 }
 
+await checkProAccess();
 
+// === Логіка показу відео ===
 
-// 🎬 Якщо користувач має PRO або серіал не PRO — показуємо відео
-if (hasPro) {
+// серіал НЕ PRO → всім доступно
+if (!isProSeries) {
   useSource(first.stream_url || "");
-  player.pause();
-} 
-// 🎬 Якщо користувач без PRO — показуємо банер
+}
+
+// серіал PRO → тільки якщо є PRO-доступ
+else if (hasPro) {
+  useSource(first.stream_url || "");
+}
+
+// серіал PRO і НІ ПРО → банер
 else {
-  const playerBox = document.querySelector('.player-box');
-  playerBox.innerHTML = `
+  document.querySelector('.player-box').innerHTML = `
     <div style="
       background:#000;
       color:#00fff2;
@@ -993,18 +973,17 @@ else {
       padding:45px 20px;
       border-radius:12px;
       border:1px solid rgba(0,255,255,0.3);
-      box-shadow:0 0 30px rgba(0,255,255,0.15);
       font-size:18px;
       line-height:1.6;
     ">
-      💎 Цей серіал доступний лише для <b>PRO користувачів</b>.<br><br>
-      <a href="profile.html" 
-         style="color:#fff;text-decoration:underline;font-weight:600;">
-         Отримати PRO доступ
+      💎 Цей контент доступний лише для <b>PRO користувачів</b>.<br><br>
+      <a href="profile.html" style="color:#fff;text-decoration:underline;">
+         Отримати PRO
       </a>
     </div>
   `;
 }
+
 // 🔹 Глобальні кольори для сезонів (щоб уникнути ReferenceError)
 const seasonColors = {
   1: "#00fff2",
