--- a/film.html
+++ b/film.html
@@ -845,66 +845,80 @@ function getYouTubeId(url) {
     document.getElementById("filmTitle").textContent = "Фільм не знайдено";
     return;
   }
-// 🧩 Перевірка PRO-доступу
-let hasPro = true; // за замовчуванням вмикаємо (для звичайних фільмів)
+// === Перевірка PRO-доступу ===
+let hasPro = false;
+const isProFilm = String(data.pro_access || "").toUpperCase() === "PRO";
 
-if (String(data.pro_access || '').toUpperCase() === 'PRO') {
-  hasPro = false;
-
-  const tgUser = localStorage.getItem('telegram_user');
-  const emailUser = localStorage.getItem('email_user');
-  const webId = localStorage.getItem('web_id');
-  let url = window.APPS_SCRIPT_URL;
+async function checkProAccess() {
+  // якщо фільм БЕЗ PRO → доступний всім
+  if (!isProFilm) {
+    hasPro = true;
+    return;
+  }
 
   try {
-    // 🟢 1️⃣ Telegram-вхід (id завжди числовий)
+    const tgUser    = localStorage.getItem("telegram_user");
+    const emailUser = localStorage.getItem("email_user");
+    const webId     = localStorage.getItem("web_id");
+
+    let url = window.APPS_SCRIPT_URL;
+
     if (tgUser) {
       const parsed = JSON.parse(tgUser);
-      if (parsed?.id) {
-        url += `?user_id=${encodeURIComponent(parsed.id)}`;
-      }
-
-    // 🟣 2️⃣ Email-вхід (WEB-ID)
+      url += `?user_id=${parsed.id}`;
     } else if (webId) {
-      url += `?user_id=${encodeURIComponent(webId)}`;
-
-    // 🔸 3️⃣ fallback — якщо id зберігся в emailUser
+      url += `?user_id=${webId}`;
     } else if (emailUser) {
       const parsed = JSON.parse(emailUser);
-      if (parsed?.id) {
-        url += `?user_id=${encodeURIComponent(parsed.id)}`;
-      }
+      url += `?user_id=${parsed.id}`;
     }
 
-    console.log("📡 URL перевірки PRO:", url);
     const res = await fetch(url);
     const json = await res.json();
     hasPro = json?.isPro === true;
-    console.log("🔎 Результат перевірки PRO:", json);
 
-  } catch (err) {
-    console.warn("❌ Помилка перевірки PRO:", err);
-  }
-
-  // 💎 Якщо PRO неактивний — блокуємо відео
-  if (!hasPro) {
-    const playerBox = document.querySelector(".player-box");
-    playerBox.innerHTML = `
-      <div style="
-        background:#000;
-        color:#00fff2;
-        text-align:center;
-        padding:40px;
-        border-radius:12px;
-        border:1px solid rgba(0,255,255,0.3);
-        box-shadow:0 0 30px rgba(0,255,255,0.15);
-      ">
-        💎 Цей фільм доступний лише для PRO користувачів.<br><br>
-        <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
-      </div>
-    `;
+  } catch (e) {
+    hasPro = false;
   }
 }
+
+await checkProAccess();
+
+// === Логіка показу відео ===
+
+// фільм НЕ PRO → всім можна
+if (!isProFilm) {
+  document.querySelector(".player-box").innerHTML = buildVideoTag();
+  setupPlayer(movieUrl);
+}
+
+// фільм PRO → тільки якщо є доступ
+else if (hasPro) {
+  document.querySelector(".player-box").innerHTML = buildVideoTag();
+  setupPlayer(movieUrl);
+}
+
+// фільм PRO, доступу немає → банер
+else {
+  document.querySelector(".player-box").innerHTML = `
+    <div style="
+      background:#000;
+      color:#00fff2;
+      text-align:center;
+      padding:45px 20px;
+      border-radius:12px;
+      border:1px solid rgba(0,255,255,0.3);
+      font-size:18px;
+      line-height:1.6;
+    ">
+      💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
+      <a href="profile.html" style="color:#fff;text-decoration:underline;">
+         Отримати PRO
+      </a>
+    </div>
+  `;
+}
+
 
 
   // 🟢 Заповнення даних
