--- a/category.html
+++ b/category.html
@@ -328,7 +328,16 @@ async function loadFilms(sortMode = currentSort) {
       <div style="position:relative;">
           <img src="${film.poster || 'https://via.placeholder.com/200x280?text=No+Image'}" alt="${film.title}">
           
-          ${film.pro === true || film.is_pro === true ? `
+          ${(
+            film.pro == true ||
+            film.pro == "true" ||
+            film.pro == 1 ||
+            film.pro == "1" ||
+            film.is_pro == true ||
+            film.is_pro == "true" ||
+            film.is_pro == 1 ||
+            film.is_pro == "1"
+        ) ? `
             <div style="
                 position:absolute;
                 top:10px;
@@ -342,7 +351,8 @@ async function loadFilms(sortMode = currentSort) {
                 border:1px solid rgba(0,255,255,0.4);
                 backdrop-filter:blur(4px);
             ">PRO</div>
-          ` : ""}
+        ` : ""}
+
       </div>
     
       <h3>${film.title}</h3>
