--- a/film.html
+++ b/film.html
@@ -633,6 +633,25 @@ function getFilmId() {
 // Будуємо <video> з усіма потрібними атрибутами
 function buildVideoTag() {
   return `
+    <div id="video-loader" style="
+      position:absolute;
+      inset:0;
+      background:rgba(0,0,0,0.55);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      z-index:50;
+      border-radius:12px;">
+      <div class="loader-ring" style="
+        width:60px;
+        height:60px;
+        border:5px solid rgba(0,255,255,0.2);
+        border-top-color:#00fff2;
+        border-radius:50%;
+        animation:spin 0.9s linear infinite;">
+      </div>
+    </div>
+
     <video id="filmPlayer"
       controls
       playsinline
@@ -640,7 +659,21 @@ function buildVideoTag() {
       crossorigin="anonymous"
       preload="metadata"
       style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;">
-    </video>`;
+    </video>
+
+    <div id="bigPlayBtn"
+      style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+             background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
+             transition:opacity 0.3s ease;">
+      <div style="width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
+                  display:flex;align-items:center;justify-content:center;
+                  box-shadow:0 0 25px rgba(0,255,255,0.5);">
+        <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
+          <path d="M8 5v14l11-7z"/>
+        </svg>
+      </div>
+    </div>
+  `;
 }
 
 
