--- a/film.html
+++ b/film.html
@@ -554,31 +554,8 @@
 
 
 
-<div class="player-box">
-  <div id="video-loader">
-    <div class="loader-ring"></div>
-  </div>
+<div class="player-box"></div>
 
-  <div class="player-wrapper">
-    <video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"
-      style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>
-
-
-    <!-- 🔹 Велика кнопка Play поверх відео -->
-    <div id="bigPlayBtn"
-         style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
-                background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
-                transition:opacity 0.3s ease;">
-      <div style="width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
-                  display:flex;align-items:center;justify-content:center;
-                  box-shadow:0 0 25px rgba(0,255,255,0.5);">
-        <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
-          <path d="M8 5v14l11-7z"/>
-        </svg>
-      </div>
-    </div>
-  </div>
-</div>
 
 
        <div class="film-description">
