--- a/film.html
+++ b/film.html
@@ -472,6 +472,36 @@
 }
 
 
+/* === 🔄 LOADING OVERLAY для перевірки PRO === */
+.pro-check-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,0.72);
+  backdrop-filter: blur(3px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 99999;
+  color: #00fff2;
+  font-size: 18px;
+  text-shadow: 0 0 10px #00fff2;
+}
+
+.pro-check-spinner {
+  width: 65px;
+  height: 65px;
+  border: 5px solid #003b3b;
+  border-top: 5px solid #00fff2;
+  border-radius: 50%;
+  animation: spin 0.9s linear infinite;
+  margin-bottom: 16px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0); }
+  100% { transform: rotate(360deg); }
+}
 
   </style>
 </head>
@@ -531,6 +561,11 @@
 
 
 <div class="player-box">
+  <div id="proCheckOverlay" class="pro-check-overlay" style="display:none;">
+    <div class="pro-check-spinner"></div>
+    Перевіряємо PRO доступ…
+  </div>
+
   <div class="player-wrapper">
     <video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"
       style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>
@@ -848,6 +883,10 @@ function getYouTubeId(url) {
 // 🧩 Перевірка PRO-доступу
 let hasPro = true; // за замовчуванням вмикаємо (для звичайних фільмів)
 
+const proOverlay = document.getElementById("proCheckOverlay");
+if (proOverlay) proOverlay.style.display = "flex"; // 🔄 показуємо лоадер
+
+
 if (String(data.pro_access || '').toUpperCase() === 'PRO') {
   hasPro = false;
 
@@ -881,6 +920,8 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
     const json = await res.json();
     hasPro = json?.isPro === true;
     console.log("🔎 Результат перевірки PRO:", json);
+    if (proOverlay) proOverlay.style.display = "none"; // ✅ ховаємо лоадер
+
 
   } catch (err) {
     console.warn("❌ Помилка перевірки PRO:", err);
