--- a/film.html
+++ b/film.html
@@ -472,35 +472,31 @@
 }
 
 
-/* === 🔄 LOADING OVERLAY для перевірки PRO === */
 .pro-check-overlay {
   position: absolute;
   inset: 0;
-  background: rgba(0,0,0,0.72);
-  backdrop-filter: blur(3px);
+  background: rgba(0,0,0,0.85);
+  backdrop-filter: blur(4px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 99999;
-  color: #00fff2;
-  font-size: 18px;
-  text-shadow: 0 0 10px #00fff2;
+  color: #ffd966;
+  font-size: 20px;
+  font-weight: 700;
+  text-shadow: 0 0 15px rgba(255,215,0,0.8);
 }
 
 .pro-check-spinner {
-  width: 65px;
-  height: 65px;
-  border: 5px solid #003b3b;
-  border-top: 5px solid #00fff2;
+  width: 70px;
+  height: 70px;
+  border: 5px solid rgba(255,215,0,0.25);
+  border-top: 5px solid #ffd500;
   border-radius: 50%;
-  animation: spin 0.9s linear infinite;
+  animation: spin 0.8s linear infinite;
+  box-shadow: 0 0 20px rgba(255,215,0,0.6);
   margin-bottom: 16px;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0); }
-  100% { transform: rotate(360deg); }
 }
 
   </style>
