--- a/film.html
+++ b/film.html
@@ -498,7 +498,10 @@
   box-shadow: 0 0 20px rgba(255,215,0,0.6);
   margin-bottom: 16px;
 }
-
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
   </style>
 </head>
 
