--- a/series.html
+++ b/series.html
@@ -524,33 +524,33 @@
 .pro-check-overlay {
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0,0,0,0.85);
   backdrop-filter: blur(4px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 99999;
-  color: #00fff2;
+  color: #ffd966;
   font-size: 20px;
   font-weight: 700;
-  text-shadow: 0 0 15px rgba(0,255,255,0.6);
+  text-shadow: 0 0 15px rgba(255,215,0,0.8);
 }
 
 .pro-check-spinner {
   width: 70px;
   height: 70px;
-  border: 5px solid rgba(0,255,255,0.35);
-  border-top: 5px solid #00fff2;
+  border: 5px solid rgba(255,215,0,0.25);
+  border-top: 5px solid #ffd500;
   border-radius: 50%;
-  animation: spin 0.75s linear infinite;
+  animation: spin 0.8s linear infinite;
+  box-shadow: 0 0 20px rgba(255,215,0,0.6);
   margin-bottom: 16px;
-  box-shadow: 0 0 20px rgba(0,255,255,0.4);
 }
 
 @keyframes spin {
-  from { transform: rotate(0deg); }
-  to   { transform: rotate(360deg); }
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
   </style>
