--- a/film.html
+++ b/film.html
@@ -560,29 +560,33 @@
 
 
 <div class="player-box">
+  <img id="playerPoster" src=""
+       style="position:absolute;inset:0;width:100%;height:100%;
+       object-fit:cover;opacity:0.35;filter:blur(3px);z-index:1;">
+
   <div id="proCheckOverlay" class="pro-check-overlay" style="display:none;">
     <div class="pro-check-spinner"></div>
     Перевіряємо PRO доступ…
   </div>
-  <img id="playerPoster" src="" style="position:absolute;inset:0;width:100%;height:100%;object-fit:cover;opacity:0.35;filter:blur(3px);z-index:1;">
 
+  <div id="playerContent">
+    <div class="player-wrapper">
+      <video id="filmPlayer" controls playsinline muted crossorigin="anonymous"
+             preload="metadata"
+             style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;">
+      </video>
 
-  <div class="player-wrapper">
-    <video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"
-      style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>
-
-
-    <!-- 🔹 Велика кнопка Play поверх відео -->
-    <div id="bigPlayBtn"
-         style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
-                background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
-                transition:opacity 0.3s ease;">
-      <div style="width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
-                  display:flex;align-items:center;justify-content:center;
-                  box-shadow:0 0 25px rgba(0,255,255,0.5);">
-        <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
-          <path d="M8 5v14l11-7z"/>
-        </svg>
+      <div id="bigPlayBtn"
+           style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+                  background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
+                  transition:opacity 0.3s ease;">
+        <div style="width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
+                    display:flex;align-items:center;justify-content:center;
+                    box-shadow:0 0 25px rgba(0,255,255,0.5);">
+          <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
+            <path d="M8 5v14l11-7z"/>
+          </svg>
+        </div>
       </div>
     </div>
   </div>
@@ -1030,31 +1034,34 @@ currentSource = "movie";
 
 // якщо користувач має PRO — показуємо відео
 if (hasPro) {
-  document.querySelector(".player-box").innerHTML = buildVideoTag();
+  document.getElementById("playerContent").innerHTML = buildVideoTag();
   setupPlayer(movieUrl);
 
 }
 // якщо НЕ має PRO — показуємо банер
 else {
-  document.querySelector(".player-box").innerHTML = `
-    <div style="
-      background:#000;
-      color:#00fff2;
-      text-align:center;
-      padding:45px 20px;
-      border-radius:12px;
-      border:1px solid rgba(0,255,255,0.3);
-      box-shadow:0 0 30px rgba(0,255,255,0.15);
-      font-size:18px;
-      line-height:1.6;
-    ">
-      💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
-      <a href="profile.html" 
-         style="color:#fff;text-decoration:underline;font-weight:600;">
-         Отримати PRO доступ
-      </a>
-    </div>
-  `;
+  document.getElementById("playerContent").innerHTML = `
+  <div style="
+    background:#000;
+    color:#00fff2;
+    text-align:center;
+    padding:45px 20px;
+    border-radius:12px;
+    border:1px solid rgba(0,255,255,0.3);
+    box-shadow:0 0 30px rgba(0,255,255,0.15);
+    font-size:18px;
+    line-height:1.6;
+    position:relative;
+    z-index:5;
+  ">
+    💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
+    <a href="profile.html" 
+       style="color:#fff;text-decoration:underline;font-weight:600;">
+       Отримати PRO доступ
+    </a>
+  </div>
+`;
+
 }
 
 
