--- a/film.html
+++ b/film.html
@@ -1069,13 +1069,33 @@ else {
 btnMovie.addEventListener("click", () => {
   if (currentSource === "movie") return;
   currentSource = "movie";
+
   btnMovie.classList.add("active");
   btnTrailer.classList.remove("active");
 
-  const box = document.querySelector(".player-box");
+  // 🔥 Перемикаємо контент на відео-плеєр
   document.getElementById("playerContent").innerHTML = buildVideoTag();
+
+  // 🔥 Якщо є PRO — запускаємо відео
   if (hasPro) {
     setupPlayer(movieUrl);
+  } else {
+    document.getElementById("playerContent").innerHTML = `
+      <div style="
+        background:#000;
+        color:#00fff2;
+        text-align:center;
+        padding:45px 20px;
+        border-radius:12px;
+        border:1px solid rgba(0,255,255,0.3);
+        box-shadow:0 0 30px rgba(0,255,255,0.15);
+        font-size:18px;
+        line-height:1.6;
+      ">
+        💎 Доступ лише для <b>PRO</b> користувачів.<br><br>
+        <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
+      </div>
+    `;
   }
 });
 
@@ -1086,7 +1106,7 @@ btnMovie.addEventListener("click", () => {
     btnTrailer.classList.add("active");
     btnMovie.classList.remove("active");
 
-    const box = document.querySelector(".player-box");
+  
 
     // Якщо трейлер з YouTube/GoogleVideo — показуємо iframe
     if (
