--- a/film.html
+++ b/film.html
@@ -560,33 +560,27 @@
 
 
 <div class="player-box">
-  <img id="playerPoster" src=""
-       style="position:absolute;inset:0;width:100%;height:100%;
-       object-fit:cover;opacity:0.35;filter:blur(3px);z-index:1;">
-
   <div id="proCheckOverlay" class="pro-check-overlay" style="display:none;">
     <div class="pro-check-spinner"></div>
     Перевіряємо PRO доступ…
   </div>
 
-  <div id="playerContent">
-    <div class="player-wrapper">
-      <video id="filmPlayer" controls playsinline muted crossorigin="anonymous"
-             preload="metadata"
-             style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;">
-      </video>
+  <div class="player-wrapper">
+    <video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"
+      style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>
 
-      <div id="bigPlayBtn"
-           style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
-                  background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
-                  transition:opacity 0.3s ease;">
-        <div style="width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
-                    display:flex;align-items:center;justify-content:center;
-                    box-shadow:0 0 25px rgba(0,255,255,0.5);">
-          <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
-            <path d="M8 5v14l11-7z"/>
-          </svg>
-        </div>
+
+    <!-- 🔹 Велика кнопка Play поверх відео -->
+    <div id="bigPlayBtn"
+         style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+                background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
+                transition:opacity 0.3s ease;">
+      <div style="width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
+                  display:flex;align-items:center;justify-content:center;
+                  box-shadow:0 0 25px rgba(0,255,255,0.5);">
+        <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
+          <path d="M8 5v14l11-7z"/>
+        </svg>
       </div>
     </div>
   </div>
@@ -934,7 +928,8 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
 
   // 💎 Якщо PRO неактивний — блокуємо відео
   if (!hasPro) {
-    document.getElementById("playerContent").innerHTML = `
+    const playerBox = document.querySelector(".player-box");
+    playerBox.innerHTML = `
       <div style="
         background:#000;
         color:#00fff2;
@@ -948,14 +943,12 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
         <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
       </div>
     `;
-}
-
+  }
 }
 
 
   // 🟢 Заповнення даних
   document.getElementById("filmPoster").src = data.poster || "";
-  document.getElementById("playerPoster").src = data.poster || "";
   // 🧩 Захист від ботів з "сіллю" (salt)
   const titleEl = document.getElementById("filmTitle");
   if (titleEl && data.title) {
@@ -1034,34 +1027,31 @@ currentSource = "movie";
 
 // якщо користувач має PRO — показуємо відео
 if (hasPro) {
-  document.getElementById("playerContent").innerHTML = buildVideoTag();
+  document.querySelector(".player-box").innerHTML = buildVideoTag();
   setupPlayer(movieUrl);
 
 }
 // якщо НЕ має PRO — показуємо банер
 else {
-  document.getElementById("playerContent").innerHTML = `
-  <div style="
-    background:#000;
-    color:#00fff2;
-    text-align:center;
-    padding:45px 20px;
-    border-radius:12px;
-    border:1px solid rgba(0,255,255,0.3);
-    box-shadow:0 0 30px rgba(0,255,255,0.15);
-    font-size:18px;
-    line-height:1.6;
-    position:relative;
-    z-index:5;
-  ">
-    💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
-    <a href="profile.html" 
-       style="color:#fff;text-decoration:underline;font-weight:600;">
-       Отримати PRO доступ
-    </a>
-  </div>
-`;
-
+  document.querySelector(".player-box").innerHTML = `
+    <div style="
+      background:#000;
+      color:#00fff2;
+      text-align:center;
+      padding:45px 20px;
+      border-radius:12px;
+      border:1px solid rgba(0,255,255,0.3);
+      box-shadow:0 0 30px rgba(0,255,255,0.15);
+      font-size:18px;
+      line-height:1.6;
+    ">
+      💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
+      <a href="profile.html" 
+         style="color:#fff;text-decoration:underline;font-weight:600;">
+         Отримати PRO доступ
+      </a>
+    </div>
+  `;
 }
 
 
@@ -1069,33 +1059,13 @@ else {
 btnMovie.addEventListener("click", () => {
   if (currentSource === "movie") return;
   currentSource = "movie";
-
   btnMovie.classList.add("active");
   btnTrailer.classList.remove("active");
 
-  // 🔥 Перемикаємо контент на відео-плеєр
-  document.getElementById("playerContent").innerHTML = buildVideoTag();
-
-  // 🔥 Якщо є PRO — запускаємо відео
+  const box = document.querySelector(".player-box");
+  box.innerHTML = buildVideoTag();
   if (hasPro) {
     setupPlayer(movieUrl);
-  } else {
-    document.getElementById("playerContent").innerHTML = `
-      <div style="
-        background:#000;
-        color:#00fff2;
-        text-align:center;
-        padding:45px 20px;
-        border-radius:12px;
-        border:1px solid rgba(0,255,255,0.3);
-        box-shadow:0 0 30px rgba(0,255,255,0.15);
-        font-size:18px;
-        line-height:1.6;
-      ">
-        💎 Доступ лише для <b>PRO</b> користувачів.<br><br>
-        <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
-      </div>
-    `;
   }
 });
 
@@ -1106,7 +1076,7 @@ btnMovie.addEventListener("click", () => {
     btnTrailer.classList.add("active");
     btnMovie.classList.remove("active");
 
-  
+    const box = document.querySelector(".player-box");
 
     // Якщо трейлер з YouTube/GoogleVideo — показуємо iframe
     if (
@@ -1119,7 +1089,7 @@ btnMovie.addEventListener("click", () => {
       const ytId = m ? m[1] : "";
       const src = ytId ? `https://www.youtube.com/embed/${ytId}` : trailerUrl;
 
-     document.getElementById("playerContent").innerHTML = `
+      box.innerHTML = `
         <iframe
           width="100%" height="480"
           src="${src}"
@@ -1131,7 +1101,7 @@ btnMovie.addEventListener("click", () => {
 
     } else {
       // Інакше — звичайний відео-плеєр
-      document.getElementById("playerContent").innerHTML = buildVideoTag();
+      box.innerHTML = buildVideoTag();
       setupPlayer(trailerUrl);
 
     }
