--- a/multseries.html
+++ b/multseries.html
@@ -757,7 +757,7 @@ if (MY_DOMAINS.some(domain => (first.stream_url || "").includes(domain))) {
 
 
 
-// 🧩 Перевірка PRO-доступу (працює і для Telegram, і для Email/Web)
+// 🧩 Перевірка PRO-доступу
 let hasPro = true;
 const isProSeries = String(first.pro_access || '').toUpperCase() === 'PRO';
 
@@ -767,26 +767,17 @@ if (isProSeries) {
   const proOverlay = document.getElementById("proCheckOverlay");
   if (proOverlay) proOverlay.style.display = "flex";
 
-
-if (isProSeries) {
-  hasPro = false;
-
   const tgUser   = localStorage.getItem('telegram_user');
   const emailUser = localStorage.getItem('email_user');
   const webId     = localStorage.getItem('web_id');
   let url = window.APPS_SCRIPT_URL;
 
   try {
-    // 🟢 Telegram-вхід
     if (tgUser) {
       const parsed = JSON.parse(tgUser);
       if (parsed?.id) url += `?user_id=${encodeURIComponent(parsed.id)}`;
-
-    // 🟣 Email / Web-вхід (WEB-ID)
     } else if (webId) {
       url += `?user_id=${encodeURIComponent(webId)}`;
-
-    // 🔸 Резерв — якщо ID є всередині emailUser
     } else if (emailUser) {
       const parsed = JSON.parse(emailUser);
       if (parsed?.id) url += `?user_id=${encodeURIComponent(parsed.id)}`;
@@ -796,14 +787,13 @@ if (isProSeries) {
     const res = await fetch(url);
     const json = await res.json();
     hasPro = json?.isPro === true;
-    console.log("🔎 Результат PRO:", json);
-    if (proOverlay) proOverlay.style.display = "none";   // ✅ ХОВАЄМО ЛОАДЕР
+
+    if (proOverlay) proOverlay.style.display = "none";
 
   } catch (err) {
     console.warn("❌ Помилка перевірки PRO:", err);
   }
 
-  // 💎 Якщо немає PRO — показуємо банер
   if (!hasPro) {
     const playerBox = document.querySelector('.player-box');
     playerBox.innerHTML = `
@@ -814,13 +804,12 @@ if (isProSeries) {
         padding:45px 20px;
         border-radius:12px;
         border:1px solid rgba(0,255,255,0.3);
-        box-shadow:0 0 30px rgba(0,255,255,0.15);
         font-size:18px;
         line-height:1.6;
       ">
-        💎 Цей контент доступний лише для <b>PRO користувачів</b>.<br><br>
+        💎 Цей мультсеріал доступний лише для <b>PRO користувачів</b>.<br><br>
         <a href="profile.html" style="color:#fff;text-decoration:underline;font-weight:600;">
-          Отримати PRO
+          Отримати PRO доступ
         </a>
       </div>
     `;
